# movie-trailer-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
AGENTS/: ENV.md  HISTORY.md  MEMORY.md  SPEC.md  STATE.md
src/movie_trailer_mcp/: __init__.py  cache.py  config.py  context.py  models.py  server.py  tools.py
src/movie_trailer_mcp/clients/: tmdb.py  youtube.py
tests/: conftest.py  test_tools.py
tests/integration/: test_live.py
